--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             background: url('https://i.pinimg.com/originals/51/ae/a3/51aea3393b8234a1e69d8713a0a58bc3.gif') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Courier New', Courier, monospace;
-            color: #0000ff;
+            color: #ff0000;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -22,23 +22,23 @@
         .image-container img {
             width: 750px; 
             height: auto;
-            border: 2px solid #0000ff; 
+            border: 2px solid #ff0000; 
             border-radius: 15px;
             box-shadow: 0 0 15px rgba(0, 0, 255, 0.7); 
         }
         .info {
             margin-top: 20px;
             font-size: 1.5em;
-            color: #0000ff; 
-            text-shadow: 0px 0px 8px #0000ff, 0px 0px 15px #0000ff, 0px 0px 25px #0000ff; 
+            color: #ff0000; 
+            text-shadow: 0px 0px 8px #ff0000, 0px 0px 15px #ff0000, 0px 0px 25px #ff0000; 
             letter-spacing: 4.5px; 
             white-space: pre-wrap;
         }
         .text {
             margin-top: 20px;
             font-size: 3em; 
-            color: #0000ff; 
-            text-shadow: 0px 0px 8px #0000ff, 0px 0px 15px #0000ff, 0px 0px 25px #0000ff; 
+            color: #ff0000; 
+            text-shadow: 0px 0px 8px #ff0000, 0px 0px 15px #ff0000, 0px 0px 25px #ff0000; 
             letter-spacing: 4.5px; 
         }
     </style>
