--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <span><strong>Organization:</strong> <span id="org"></span></span><br>
         <span><strong>Timezone:</strong> <span id="timezone"></span></span>
     </div>
-    <div class="text">كس اخت الشغله يزلمه</div>
+    <div class="text">S i D F</div>
 
     <script>
          fetch('https://ipinfo.io/json')
