--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="https://t3.ftcdn.net/jpg/05/56/29/10/360_F_556291020_q2ieMiOCKYbtoLITrnt7qcSL1LJYyWrU.jpg">
+        <img src="https://modo3.com/thumbs/fit630x300/82503/1480879485/%D8%AA%D8%A7%D8%B1%D9%8A%D8%AE_%D9%87%D8%AA%D9%84%D8%B1.jpg">
     </div>
     <audio autoplay loop>
-        <source src="https://www.youtube.com/watch?v=2RjCr6yBl0c&list=RD2RjCr6yBl0c&start_radio=1&pp=ygUxINix2YrZhdmK2YPYsyDYp9mE2YPYqNmK2LEg2YjYtdmEINmK2Kcg2LHYrNin2YTZh6AHAQ%3D%3D" type="audio/mpeg">
+        <source src="vvvvvvvv" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <div class="info" id="ip-info">
